--- a/index.html
+++ b/index.html
@@ -1638,7 +1638,7 @@ function showRewardTip(probability) {
     font-weight: 600; 
     color: #ffd700;
     text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700, 0 0 30px #ffd700;
-    z-index: 999999; 
+    z-index: 1000000; 
     pointer-events: none;
     font-family: 'Cinzel', serif; /* 衬线字体，和你的页面风格统一 */
     background: radial-gradient(circle, rgba(255,215,0,0.2) 0%, rgba(255,215,0,0) 70%);
