--- a/index.html
+++ b/index.html
@@ -247,12 +247,15 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.1);
     z-index: 999999;
     display: none;
     flex-direction: column;
-    justify-content: flex-end;
+    /* 核心修改：用justify-content控制垂直位置，预留顶部空间 */
+    justify-content: center; 
     align-items: center;
+    /* 移除固定padding-bottom，改为内边距控制 */
+    padding: 0 5vw;
 }
 
 /* 冻结提示文字 - 通用样式 */
@@ -260,6 +263,24 @@
     color: #ffd700;
     font-family: 'Cinzel', serif;
     text-shadow: 0 0 10px #ffd700;
+	letter-spacing: 1px !important;
+	/* 新增：文字和按钮的间距 */
+    margin-bottom: 3vw;
+    /* 文字居中 */
+    text-align: center;
+}
+		/* 继续按钮 - 通用样式 */
+.freeze-btn {
+    background: #ffd700;
+    color: #2c1f00;
+    border: none;
+    font-family: 'Cinzel', serif;
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 0 15px #ffd700;
+    transition: all 0.3s ease;
+	/* 新增：按钮最大宽度，防止溢出 */
+    max-width: 80vw;
 }
 /* 继续按钮 hover/active 通用效果 */
 .freeze-btn:hover {
@@ -270,7 +291,11 @@
 /* ========== PC端样式（屏幕>768px） ========== */
 @media (min-width: 769px) {
     #rewardFreezeOverlay {
-        padding-bottom: 100px; /* PC端固定底部间距 */
+       /* PC端恢复底部对齐，保留原有风格 */
+        justify-content: flex-end;
+        padding-bottom: 100px;
+        padding-left: 0;
+        padding-right: 0;
     }
     .freeze-tip {
         font-size: 24px;
@@ -286,7 +311,9 @@
 /* ========== 移动端样式（屏幕≤768px） ========== */
 @media (max-width: 768px) {
     #rewardFreezeOverlay {
-        padding-bottom: 15vw; /* 移动端相对间距 */
+        /* 移动端居中显示，避免超出屏幕 */
+        justify-content: center;
+        padding-bottom: 0;
     }
     .freeze-tip {
         font-size: 5vw; /* 移动端相对字体 */
@@ -296,6 +323,8 @@
         padding: 3vw 8vw; /* 移动端相对内边距 */
         font-size: 4vw; /* 移动端相对字体 */
         border-radius: 2vw; /* 移动端大圆角 */
+		/* 移动端按钮宽度适配 */
+        width: 70vw;
     }
 }
     /* Loading 动画 - 通用样式 */
@@ -2130,10 +2159,10 @@ function startSmoothSettleAnimation(duration = 3) {
                 document.addEventListener('fullscreenchange', () => {
                 // 如果当前是全屏状态
                 if (document.fullscreenElement) {
-                    fullscreenBtn.textContent = '取消全屏'; 
+                    fullscreenBtn.textContent = 'Exit Full Screen'; 
                 } else {
                     // 如果退出了全屏
-                    fullscreenBtn.textContent = '全屏显示'; 
+                    fullscreenBtn.textContent = 'Full Screen Display'; 
                 }
             });
             }
