--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
     text-shadow: 0 0 10px #ffd700;
 	letter-spacing: 1px !important;
 	/* 新增：文字和按钮的间距 */
-    margin-bottom: 3vw;
+    margin-bottom: 6vw;
+	padding: 2vw 0;
     /* 文字居中 */
     text-align: center;
 }
@@ -317,7 +318,9 @@
     }
     .freeze-tip {
         font-size: 5vw; /* 移动端相对字体 */
-        margin-bottom: 5vw; /* 移动端相对间距 */
+        margin-bottom: 8vw; /* 移动端相对间距 */
+		color: #000;
+		font-weight: 700;
     }
     .freeze-btn {
         padding: 3vw 8vw; /* 移动端相对内边距 */
@@ -325,6 +328,7 @@
         border-radius: 2vw; /* 移动端大圆角 */
 		/* 移动端按钮宽度适配 */
         width: 70vw;
+		margin-top: 2vw;
     }
 }
     /* Loading 动画 - 通用样式 */
