--- a/index.html
+++ b/index.html
@@ -1813,7 +1813,7 @@ function triggerRewardEffect(mesh, probability) {
   mesh.traverse((child) => {
     if (child.isMesh && child.geometry instanceof THREE.BoxGeometry) { // 找到相框
       child.material.emissive.setHex(0xffff00);
-      child.material.emissiveIntensity = 0;
+      child.material.emissiveIntensity = 2.0;
       // 相框呼吸发光
       gsap.to(child.material, { 
         emissiveIntensity: 0.5, 
@@ -1842,7 +1842,7 @@ function triggerRewardEffect(mesh, probability) {
   }
 
   // 5. 新增：全屏闪光特效
-  createScreenFlash();
+  //createScreenFlash();
 
   // 6. 音效（可选，建议添加，听觉+视觉双重冲击）
   // playRewardSound();
