--- a/index.html
+++ b/index.html
@@ -1759,8 +1759,9 @@ STATE.spinVel.y *= 0.9;
 /**
  * 通用工具函数：重置照片材质为「低反光模式」（核心修复）
  * @param {THREE.Group} mesh - 照片Group容器
+ *@param {number} brightness - 亮度补偿值（0~2，默认1.2，越高越亮）
  */
-function resetPhotoMaterialForLowReflect(mesh) {
+function resetPhotoMaterialForLowReflect(mesh,brightness = 1.2) {
   if (!mesh) return;
   mesh.traverse((child) => {
     if (child.isMesh) {
@@ -1802,7 +1803,7 @@ function triggerNormalEffect(mesh) {
   }
 
   // ========== 核心修复：先重置材质为低反光模式 ==========
-  resetPhotoMaterialForLowReflect(mesh);
+  resetPhotoMaterialForLowReflect(mesh,1.2);
 
   // 仅保留普通照片放大逻辑（适度缩放，减少受光面积）
   mesh.scale.lerp(new THREE.Vector3(5, 5, 5), 0.1);
@@ -1840,7 +1841,7 @@ function triggerRewardEffect(mesh, probability) {
   if (freezeOverlay) freezeOverlay.style.display = 'flex'; // 显示冻结层+按钮
 
   // ========== 核心修复1：先重置照片材质为低反光模式 ==========
-  resetPhotoMaterialForLowReflect(mesh);
+  resetPhotoMaterialForLowReflect(mesh,1.3);
 
   // ========== 核心修复2：临时降低照片周围场景光（减少缩放反光） ==========
   const originalLightIntensities = [];
@@ -1854,7 +1855,7 @@ function triggerRewardEffect(mesh, probability) {
         // 只降低照片15单位内的光源（缩小范围，避免影响全局）
         const distance = obj.position.distanceTo(mesh.position);
         if (distance < 15) {
-          obj.intensity *= 0.4; // 强度降为40%（比之前更保守，减少反光）
+          obj.intensity *= 0.7; // 强度降为40%（比之前更保守，减少反光）
         }
       }
     });
