--- a/index.html
+++ b/index.html
@@ -1998,7 +1998,7 @@ function createRewardParticles(centerPos, isBig = false) {
 // 适配单种隐藏奖励：纯英文提示（无区分，统一酷炫效果）
 function showRewardTip(probability) {
   const tip = document.createElement('div');
-  const enText = '🎁 Congratulations! You've grabbed HOW's Christmas gift;
+  const enText = '🎁 Congratulations! You just grabbed HOW Christmas gift;
   
   tip.style.cssText = `
     position: fixed; 
