--- a/index.html
+++ b/index.html
@@ -703,6 +703,11 @@
         Initial loading requires image content, please wait
     </div>
 </div>
+	    <!-- ========== 新增：加载进度条 DOM ========== -->
+    <div id="loadingProgressContainer">
+        <div id="loadingProgressBar"></div>
+        <span id="loadingProgressText">0% - Initializing Scene</span>
+    </div>
 
 
     <div id="canvas-container"></div>
